# product-validator

./: pyproject.toml  requirements.txt  setup.py
em_product/: product.py
src/em_product/: product.py
tests/: test_product.py
